docs: Update local changelog.